# trac_ik_for_windows

./: README.md
trac_ik_examples/: CMakeLists.txt  package.xml
trac_ik_examples/src/: ik_tests.cpp
trac_ik_kinematics_plugin/: CMakeLists.txt  package.xml
trac_ik_kinematics_plugin/include/trac_ik/: trac_ik_kinematics_plugin.hpp
trac_ik_kinematics_plugin/src/: trac_ik_kinematics_plugin.cpp
trac_ik_lib/: CMakeLists.txt  package.xml
trac_ik_lib/include/trac_ik/: nlopt_ik.hpp  trac_ik.hpp
trac_ik_lib/src/: kdl_tl.cpp  nlopt_ik.cpp  trac_ik.cpp
